k8s/base/gradio-deployment.yaml
#! gradio-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: gradio
    namespace: dnd-rulebook-llm
    labels:
        com.docker.compose.project: dnd-rulebook-llm
        com.docker.compose.service: gradio
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: dnd-rulebook-llm
            com.docker.compose.service: gradio
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: dnd-rulebook-llm
                com.docker.compose.service: gradio
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: gradio
                  image: dnd-rulebook-llm-gradio
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: gradio-7860
                      containerPort: 7860
