k8s/base/app-service.yaml
# check if there is at least one published port

#! app-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app-published
    namespace: dnd-rulebook-llm
    labels:
        com.docker.compose.project: dnd-rulebook-llm
        com.docker.compose.service: app
spec:
    selector:
        com.docker.compose.project: dnd-rulebook-llm
        com.docker.compose.service: app
    ports:
        - name: app-8000
          port: 8000
          protocol: TCP
          targetPort: app-8000
