k8s/base/backend-expose.yaml
#! backend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend
    namespace: dnd-rulebook-llm
    labels:
        com.docker.compose.project: dnd-rulebook-llm
        com.docker.compose.service: backend
spec:
    selector:
        com.docker.compose.project: dnd-rulebook-llm
        com.docker.compose.service: backend
    ports:
        - name: backend-8000
          port: 8000
          targetPort: backend-8000
