k8s/base/gradio-service.yaml
#! gradio-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: gradio-published
    namespace: dnd-rulebook-llm
    labels:
        com.docker.compose.project: dnd-rulebook-llm
        com.docker.compose.service: gradio
spec:
    selector:
        com.docker.compose.project: dnd-rulebook-llm
        com.docker.compose.service: gradio
    ports:
        - name: gradio-7860
          port: 7860
          protocol: TCP
          targetPort: gradio-7860
